[package]
name = "fami"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.2.0"
chrono = "0.4.37"
glib = "0.19.3"
gtk = { version = "0.8.1", package = "gtk4" }
home = "0.5.9"
open = "5.1.2"
rand = "0.8.5"
reqwest = "0.12.2"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
zip = "0.6.6"
